# remote-gate-remote

./: .air.toml  .dockerignore  .gitignore  .pnp.cjs  Dockerfile  docker-compose.yml  go.mod  go.sum  package.json  tailwind.config.js
cmd/: main.go
cmd/auth/: jwt.go  passwd.go
cmd/config/: config.go
cmd/ctx/: ctx.go
cmd/db/: models.go  query.sql  query.sql.go  schema.sql  sqlc.yaml
cmd/handlers/: admin.go  auth.go  gate.go  handlers.go  user.go
cmd/logger/: logger.go
cmd/timezone/: timezone.go
data/: postmaster.pid
data/global/: 1260  1262  2671  pg_control  pg_internal.init
esp32/gate/: build.sh  config.h.example  gate.ino
rust-app/: Cargo.toml
rust-app/src/: main.rs
static/css/: tailwind.css
views/: admin.templ  admin_templ.go  firmware.templ  firmware_templ.go  form-components.templ  form-components_templ.go  html-layout.templ  html-layout_templ.go  index.html  index.templ  index_templ.go  login.templ  login_templ.go  main.css  pending-registration.templ  pending-registration_templ.go  register.templ  register_templ.go  reloader.html  renew-registration.templ  renew-registration_templ.go  reset-password.templ  reset-password_templ.go  tz.go  user.templ  user_templ.go  utils.go  verify.templ  verify_templ.go
views/components/: alerts.templ  alerts_templ.go  form-components.templ  form-components_templ.go  misc.templ  misc_templ.go  utils.go
views/emails/: email-verification.templ  email-verification_templ.go  registration-expired.templ  registration-expired_templ.go  registration-request.templ  registration-request_templ.go  (+2 more)
(+19 files in other folders)
