[package]
name = "remote-gate-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
anyhow = "1.0.59"
env_logger = "0.11.3"
itertools = "0.13.0"
thiserror = "1.0.62"
tokio = "1.38.1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "macros",
  "uuid",
  "postgres",
  "chrono",
] }
